--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,12 @@
     <string name="popular_movies">Popular Movies</string>
     <string name="upcoming_movies">Upcoming Movies</string>
     <string name="language">"Language: "</string>
+    <string name="original_title">"Original Title: "</string>
     <string name="release_date">"Release Date: "</string>
-    <string name="votes">" Votes"</string>
+    <string name="votes">"Votes: "</string>
+    <string name="rating">"Rating: "</string>
     <string name="overview">Overview</string>
+    <string name="back">back</string>
+    <string name="loading">loading</string>
+
 </resources>
